@@ -1,0 +1,2 @@
+com.sun.jersey.multipart.impl.MultiPartReaderClientSide
+com.sun.jersey.multipart.impl.MultiPartReaderServerSide
