@@ -1,4 +1,0 @@
-com.sun.jersey.multipart.impl.MultiPartConfigProvider
-com.sun.jersey.multipart.impl.MultiPartReader
-com.sun.jersey.multipart.impl.MultiPartWriter
-
